인프런 강의 분류 파트 끝

--- a/inflearn/PerfectGuide-master/4장/4(2)_3_앙상블학습_4_4_랜덤포레스트_4_5_GBM.ipynb
+++ b/inflearn/PerfectGuide-master/4장/4(2)_3_앙상블학습_4_4_랜덤포레스트_4_5_GBM.ipynb
@@ -944,8 +944,10 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "params = {\n",
-    "    'n_estimators':[100, 500],\n",
-    "    'learning_rate' : [ 0.05, 0.1]\n",
+    "    'n_estimators':np.arange(100, 500, 100),\n",
+    "    'learning_rate' : np.arange(0.05, 0.2, 0.01),\n",
+    "    'max_depth': [2, 3, 4, 5],\n",
+    "    'subsample': np.arange(0.1, 1, 0.1)\n",
     "}\n",
     "grid_cv = GridSearchCV(gb_clf , param_grid=params , cv=2 ,verbose=1)\n",
     "grid_cv.fit(X_train , y_train)\n",
