--- a/inflearn/PerfectGuide-master/4장/4(5)_8_베이지안_최적화로_hyperparameter_튜닝.ipynb
+++ b/inflearn/PerfectGuide-master/4장/4(5)_8_베이지안_최적화로_hyperparameter_튜닝.ipynb
@@ -39,8 +39,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df27d0fe-4f9b-4980-86f7-03cbdc828108",
+   "metadata": {},
+   "source": [
+    "> - GridsearchCV는 수행 시간이 너무 오래 걸린다. → 개별 하이퍼 파라미터들을 Grid 형태로 지정하는 것은 한계가 존재\n",
+    "\n",
+    "> - RandomizedSearch는 수행 시간은 줄여주지만, Random한 선택으로 최적 하이퍼 파라미터 검출에 태생적 제약(데이터 세트가 클 때)\n",
+    "\n",
+    "> - 두 가지 방법 모두 Iteration 중에 어느정도 최적화된 하이퍼 파라미터들을 활용하면서 최적화를 수행할 수 없다.\n",
+    "\n",
+    "> - ⇒ 베이지안 최적화"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5e4fdabe",
    "metadata": {},
    "outputs": [],
@@ -53,29 +67,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e0d36412",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': <hyperopt.pyll.base.Apply at 0x127696150>,\n",
-       " 'y': <hyperopt.pyll.base.Apply at 0x1276962a0>}"
+       "{'x': <hyperopt.pyll.base.Apply at 0x1062ae750>,\n",
+       " 'y': <hyperopt.pyll.base.Apply at 0x122f55d00>}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 객체\n",
     "search_space"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4dcf5c66",
    "metadata": {},
    "outputs": [],
@@ -88,12 +103,12 @@
     "    y = search_space['y']\n",
     "    retval = x**2 - 20*y\n",
     "    \n",
-    "    return retval # return {'loss': retval, 'status':STATUS_OK}"
+    "    return {'loss': retval, 'status':STATUS_OK} # return retval "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8042337e",
    "metadata": {},
    "outputs": [
@@ -101,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████| 5/5 [00:00<00:00, 774.86trial/s, best loss: -224.0]\n",
+      "100%|██████████████████████| 5/5 [00:00<00:00, 560.48trial/s, best loss: -224.0]\n",
       "best: {'x': -4.0, 'y': 12.0}\n"
      ]
     }
@@ -113,7 +128,8 @@
     "# 입력 결괏값을 저장한 Trials 객체값 생성.\n",
     "trial_val = Trials()\n",
     "\n",
-    "# 목적 함수의 최솟값을 반환하는 최적 입력 변숫값을 5번의 입력값 시도(max_evals=5)로 찾아냄.\n",
+    "# 목적 함수의 최솟값을 반환하는 최적 입력 변숫값을 5번의 입력값 시도(max_evals=5)로 찾아냄. / algo=tpe.suggest 고정\n",
+    "# rstate=np.random.default_rng(seed=0) 고정을 안 하는 것이 더 좋은 성능을 낸다. 경험적으로\n",
     "best_01 = fmin(fn=objective_func, space=search_space, algo=tpe.suggest, max_evals=5\n",
     "               , trials=trial_val, rstate=np.random.default_rng(seed=0)\n",
     "              )\n",
@@ -122,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2bbbd861",
    "metadata": {},
    "outputs": [
@@ -130,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████| 20/20 [00:00<00:00, 485.86trial/s, best loss: -296.0]\n",
+      "100%|████████████████████| 20/20 [00:00<00:00, 819.31trial/s, best loss: -296.0]\n",
       "best: {'x': 2.0, 'y': 15.0}\n"
      ]
     }
@@ -146,17 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "22cd2e49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hyperopt.base.Trials at 0x127696480>"
+       "<hyperopt.base.Trials at 0x1062d4620>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "b6624c20",
    "metadata": {},
    "outputs": [
@@ -195,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "b7cafa7b",
    "metadata": {},
    "outputs": [
@@ -214,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6272c51f",
    "metadata": {},
    "outputs": [
@@ -393,7 +409,7 @@
        "19  -0.0  -0.0     0.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,9 +423,7 @@
     "# DataFrame으로 생성. \n",
     "result_df = pd.DataFrame({'x': trial_val.vals['x'],\n",
     "                         'y': trial_val.vals['y'],\n",
-    "                          'losses': losses\n",
-    "                         }\n",
-    "                        )\n",
+    "                         'losses': losses})\n",
     "result_df"
    ]
   },
@@ -423,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "577be02a",
    "metadata": {},
    "outputs": [],
@@ -470,6 +484,7 @@
     "\n",
     "# max_depth는 5에서 20까지 1간격으로, min_child_weight는 1에서 2까지 1간격으로\n",
     "# colsample_bytree는 0.5에서 1사이, learning_rate는 0.01에서 0.2사이 정규 분포된 값으로 검색. \n",
+    "\n",
     "xgb_search_space = {'max_depth': hp.quniform('max_depth', 5, 20, 1),\n",
     "                    'min_child_weight': hp.quniform('min_child_weight', 1, 2, 1),\n",
     "                    'learning_rate': hp.uniform('learning_rate', 0.01, 0.2),\n",
@@ -490,16 +505,17 @@
     "\n",
     "# fmin()에서 입력된 search_space값으로 입력된 모든 값은 실수형임. \n",
     "# XGBClassifier의 정수형 하이퍼 파라미터는 정수형 변환을 해줘야 함. \n",
-    "# 정확도는 높은 수록 더 좋은 수치임. -1* 정확도를 곱해서 큰 정확도 값일 수록 최소가 되도록 변환\n",
+    "# 정확도는 높은 수록 더 좋은 수치임. -1* 정확도를 곱해서 큰 정확도 값일 수록 최소가 되도록 변환 -> 최소값을 찾기 때문에 -1을 곱한다. / 회귀에서는 -1을 곱할 필요 없다.\n",
     "def objective_func(search_space):\n",
     "    # 수행 시간 절약을 위해 n_estimators는 100으로 축소\n",
-    "    xgb_clf = XGBClassifier(n_estimators=100, max_depth=int(search_space['max_depth']),\n",
+    "    xgb_clf = XGBClassifier(n_estimators=100,\n",
+    "                            max_depth=int(search_space['max_depth']),\n",
     "                            min_child_weight=int(search_space['min_child_weight']),\n",
     "                            learning_rate=search_space['learning_rate'],\n",
     "                            colsample_bytree=search_space['colsample_bytree'], \n",
     "                            eval_metric='logloss')\n",
     "    \n",
-    "    accuracy = cross_val_score(xgb_clf, X_train, y_train, scoring='accuracy', cv=3)\n",
+    "    accuracy = cross_val_score(xgb_clf, X_train, y_train, scoring='accuracy', cv=3) # 교차검증을 통해 하이퍼파라미터 튜닝\n",
     "        \n",
     "    # accuracy는 cv=3 개수만큼의 정확도 결과를 가지므로 이를 평균해서 반환하되 -1을 곱해줌. \n",
     "    return {'loss':-1 * np.mean(accuracy), 'status': STATUS_OK}"
@@ -515,7 +531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|████████| 50/50 [00:05<00:00,  9.44trial/s, best loss: -0.9692546764261647]\n",
+      "100%|████████| 50/50 [00:06<00:00,  7.14trial/s, best loss: -0.9692546764261647]\n",
       "best: {'colsample_bytree': 0.6296639836459481, 'learning_rate': 0.16960815502434487, 'max_depth': 15.0, 'min_child_weight': 2.0}\n"
      ]
     }
@@ -786,10 +802,11 @@
     }
    ],
    "source": [
-    "xgb_wrapper = XGBClassifier(n_estimators=400, learning_rate=round(best['learning_rate'], 5), \n",
-    "                            max_depth=int(best['max_depth']), min_child_weight=int(best['min_child_weight']),\n",
-    "                            colsample_bytree=round(best['colsample_bytree'], 5)\n",
-    "                           )\n",
+    "xgb_wrapper = XGBClassifier(n_estimators=400,\n",
+    "                            learning_rate=round(best['learning_rate'], 5), \n",
+    "                            max_depth=int(best['max_depth']),\n",
+    "                            min_child_weight=int(best['min_child_weight']),\n",
+    "                            colsample_bytree=round(best['colsample_bytree'], 5))\n",
     "\n",
     "evals = [(X_tr, y_tr), (X_val, y_val)]\n",
     "xgb_wrapper.fit(X_tr, y_tr, early_stopping_rounds=50, eval_metric='logloss', \n",
