isolation Forest, EF-SVM

--- a/inflearn/PerfectGuide-master/4장/4(8)_11_스태킹앙상블.ipynb
+++ b/inflearn/PerfectGuide-master/4장/4(8)_11_스태킹앙상블.ipynb
@@ -575,6 +575,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.005e+01, 1.753e+01, 6.441e+01, ..., 6.499e-02, 2.894e-01,\n",
+       "        7.664e-02],\n",
+       "       [1.080e+01, 2.198e+01, 6.879e+01, ..., 7.485e-02, 2.965e-01,\n",
+       "        7.662e-02],\n",
+       "       [1.614e+01, 1.486e+01, 1.043e+02, ..., 1.129e-01, 2.778e-01,\n",
+       "        7.012e-02],\n",
+       "       ...,\n",
+       "       [9.436e+00, 1.832e+01, 5.982e+01, ..., 5.052e-02, 2.454e-01,\n",
+       "        8.136e-02],\n",
+       "       [9.720e+00, 1.822e+01, 6.073e+01, ..., 0.000e+00, 1.909e-01,\n",
+       "        6.559e-02],\n",
+       "       [1.151e+01, 2.393e+01, 7.452e+01, ..., 9.653e-02, 2.112e-01,\n",
+       "        8.732e-02]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
