--- a/혼공/RNN/9_1_2.ipynb
+++ b/혼공/RNN/9_1_2.ipynb
@@ -222,13 +222,14 @@
     "# 길이 제한\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "\n",
-    "train_seq = pad_sequences(train_input, maxlen=100)\n",
     "\n",
+    "train_seq = pad_sequences(train_input, maxlen=100)\n",
     "val_seq = pad_sequences(val_input, maxlen=100)\n",
     "\n",
     "val_seq.shape, train_seq.shape\n",
     "\n",
-    "# pad_sequence() 함수는 maxlen보다 긴 시퀀스의 앞부분을 자른다.\n",
+    "# pad_sequence() 함수는 maxlen보다 긴 시퀀스의 앞부분을 자른다. / 패딩 추가 / (샘플 개수, 타임스텝 개수): 2차원 배열 기대\n",
+    "# padding = 패딩을 추가할 위치 / pre -> post : 시퀀스 뒤에 패딩 추가\n",
     "# truncating = pre -> post : 뒷 부분을 자른다."
    ]
   },
@@ -287,6 +288,9 @@
    "source": [
     "from tensorflow import keras\n",
     "\n",
+    "# SimpleRNN : 기본 순환층 클래스\n",
+    "# (뉴런의 개수, activation(기본: tanh), dropout, return_sequences(기본: False), input_shape)\n",
+    "\n",
     "model = keras.Sequential()\n",
     "model.add(keras.layers.SimpleRNN(8, input_shape=(100, 300)))\n",
     "# 100 -> 샘플의 길이(타임 스텝의 수)\n",
@@ -315,6 +319,8 @@
    ],
    "source": [
     "# 원-핫 인코딩 유틸리티 제공\n",
+    "# to_categorical()\n",
+    "# num_classes : 클래스 개수를 지정할 수 있다. 지정하지 않으면 데이터에서 자동으로 찾는다.\n",
     "\n",
     "train_oh = keras.utils.to_categorical(train_seq)\n",
     "train_oh.shape"
@@ -586,6 +592,7 @@
     "\n",
     "model2 = keras.Sequential()\n",
     "model2.add(keras.layers.Embedding(300, 16, input_length=100)) \n",
+    "# 어휘 사전의 크기, Embedding 층이 출력할 밀집 벡터의 크기, input_length(입력 시퀀스의 길이, Embedding층 바로 뒤에 Flattendlsk Dense 클래스가 올 때 필요)\n",
     "# 300 -> 어휘 사전의 크기\n",
     "# 16 -> 임베딩 벡터의 크기: 각 단어를 고정된 크기의 밀집 벡터로 변환하는 임베딩 레이어에서, 임베딩된 벡터가 갖게 될 길이\n",
     "# 각 단어를 16차원의 벡터로 변환. 예를 들어, 단어 'apple'이 임베딩 레이어를 통과하면 16차원의 벡터로 표현\n",
